--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="viewport" content="width=device-width, initial-scale = 0.86, maximum-scale=3.0, minimum-scale=0.86">
-    <title>Document</title>
+    <title>Dr.Samir-Project</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -19,6 +19,7 @@
       <span class="page-link">1</span>
     </li>
     <li class="page-item"><a class="page-link" href="index2.html">2</a></li>
+    <li class="page-item"><a class="page-link" href="index3.html">3</a></li>
     <li class="page-item">
       <a class="page-link" href="index2.html">Next</a>
     </li>
