--- a/index2.html
+++ b/index2.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale = 0.86, maximum-scale=3.0, minimum-scale=0.86">
+    <title>Dr.Samir-Project</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -18,8 +19,9 @@
             <li class="page-item active" aria-current="page">
                 <span class="page-link">2</span>
             </li>
-            <li class="page-item disabled">
-                <span class="page-link">Next</span>
+            <li class="page-item"><a class="page-link" href="index3.html">3</a></li>
+            <li class="page-item">
+              <a class="page-link" href="index3.html">Next</a>
             </li>
         </ul>
     </nav>
