--- a/index3.html
+++ b/index3.html
@@ -29,7 +29,7 @@
         <todolist>
             <div class="header">
                 <h2>My To Do List</h2>
-                <input type="text" id ="listinput" placeholder="Add to the to do list">
+                <input type="text" id ="listinput" placeholder="Add to the to do list...">
                 <span onclick="newElement()" class="addBtn">Add</span>
             </div>
             <ul class="listitem" onclick="toggleChecked(event)">
@@ -37,9 +37,8 @@
                <li>dodo</li>
                <li>zewelzew</li>
             </ul>
+        </todolist>
     </section>
-</todolist>
-    <script defer src="script.js"></script>
 </body>
 <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
@@ -50,4 +49,5 @@
   });
 
 </script>
+<script defer src="script.js"></script>
 </html>
